# kmeans-thesis-segmentation

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakeSettings.json  Doxyfile  LICENSE  PERFORMANCE_ANALYSIS_REPORT.md  README.md
docs/: architecture_and_developer_guide.md  user_and_benchmark_guide.md
include/: clustering.hpp  clustering_backends.hpp  constants.hpp  coreset.hpp  enums.hpp  rcc.hpp  utils.hpp
include/backend/: CudaAssignmentContext.hpp  cuda_assignment_context.hpp
include/clustering/: ClusteringManager.hpp  classical_engine.hpp  clustering_factory.hpp  clustering_manager.hpp  data_preprocessor.hpp  flat_data_preprocessor.hpp  full_data_preprocessor.hpp  initializer.hpp  kmeans_engine.hpp  kmeans_plus_plus_initializer.hpp  metrics.hpp  random_initializer.hpp  rcc_data_preprocessor.hpp
include/clustering/engines/: base_kmeans_engine.hpp  classical_engine.hpp  kmeans_engine.hpp  quantum_engine.hpp
include/clustering/initializers/: initializer.hpp  kmeans_plus_plus_initializer.hpp  random_initializer.hpp
include/clustering/preprocessor/: strided_data_preprocessor.hpp
include/clustering/preprocessors/: full_data_preprocessor.hpp
include/common/: config.hpp  constants.hpp  enums.hpp  scoped_timer.hpp  utils.hpp  vector_math.hpp
include/core/: coreset.hpp  rcc.hpp
include/io/: application.hpp  benchmark_command.hpp  benchmark_observer.hpp  benchmark_result.hpp  benchmark_runner.hpp  ui_manager.hpp  video_io.hpp
include/io/ui/: benchmark_overlay_ui.hpp  control_panel_ui.hpp  video_feed_ui.hpp
old/: clustering.hpp  clustering_backends.hpp  clustering_entry.cpp  kmeans_regular.cpp
presentation/: presentation.tex
scss/: main.tex  references.bib
scss/chapters/: 00_abstract.tex  01_intro.tex  02_theory.tex  03_architecture.tex  04_implementation.tex  05_results.tex  06_conclusions.tex
scss/figures/: .gitkeep
src/: coreset.cpp  main.cpp  rcc.cpp  utils.cpp  video_io.cpp
src/backend/: cuda_kernels.cu
src/clustering/: ClusteringManager.cpp  clustering_entry.cpp  clustering_factory.cpp  clustering_manager.cpp  full_data_preprocessor.cpp  kmeans_plus_plus_initializer.cpp  kmeans_regular.cpp  metrics.cpp  random_initializer.cpp  rcc_data_preprocessor.cpp
src/clustering/engines/: base_kmeans_engine.cu  classical_engine.cu  quantum_engine.cu
src/clustering/initializers/: kmeans_plus_plus_initializer.cpp  kmeans_plus_plus_initializer.cu  random_initializer.cpp
src/clustering/preprocessor/: strided_data_preprocessor.cu
src/clustering/preprocessors/: full_data_preprocessor.cpp  full_data_preprocessor.cu  rcc_data_preprocessor.cpp
src/common/: utils.cpp
src/core/: coreset.cpp  rcc.cpp
src/io/: application.cpp  benchmark_command.cpp  benchmark_runner.cpp  ui_manager.cpp
src/io/ui/: benchmark_overlay_ui.cpp  control_panel_ui.cpp  video_feed_ui.cpp
tests/: CMakeLists.txt
tests/backend/: cuda_kernels_tests.cu
tests/clustering/: clustering_factory_tests.cpp  clustering_manager_tests.cpp  metrics_tests.cpp
tests/clustering/engines/: base_engine_tests.cu  base_kmeans_engine_tests.cu  classical_engine_tests.cu  quantum_engine_tests.cu
tests/clustering/initializers/: kmeans_plus_plus_initializer_tests.cu  random_initializer_tests.cu
tests/clustering/preprocessor/: strided_data_preprocessor_tests.cu
tests/common/: utils_tests.cpp  vector_math_tests.cpp
tests/io/: ui_integration_tests.cpp
thesis/: main.tex  references.bib  style.sty
thesis/chapters/: 00_abstract.tex  01_intro.tex  02_theory.tex  03_architecture.tex  04_implementation.tex  05_testing.tex  06_results.tex  07_conclusions.tex  abstract.tex
